--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Apps on Devices Sample App</string>
 
+    <string name="terminal_sample_app">Terminal sample app</string>
+    <string name="new_payment">New payment</string>
+
+    <string name="please_select_reader">Please select a reader first!</string>
+
 </resources>
