· Add Terminal SDK initialization process. · Update the package path for MVVM. · Use coroutine model to define network communication interface. · Add and update resource files.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Apps on Devices Sample App</string>
+
+    <string name="terminal_sample_app">Terminal sample app</string>
+    <string name="new_payment">New payment</string>
+
+    <string name="please_select_reader">Please select a reader first!</string>
 
 </resources>
