--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
 
     <string name="please_select_reader">Please select a reader first!</string>
     <string name="discover_readers">Discover Readers</string>
+
+    <string name="discover_reader_title">Reader List</string>
+    <string name="status_reader_connected">Reader connected!</string>
+    <string name="status_reader_offline">Reader offline!</string>
+    <string name="unknown_reader">Unknown Reader</string>
+    <string name="connected">Connected</string>
 </resources>
