--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,12 @@
     <string name="unknown_reader">Unknown Reader</string>
     <string name="connected">Connected</string>
 
+    <string name="enter_amount">Enter amount</string>
+    <string name="default_amount">$0.00</string>
+    <string name="request_payment">Request payment</string>
+    <string name="checkout">Checkout</string>
+    <string name="amount_entered">Amount entered</string>
+
     <string name="send_receipt_tip">How would you like to receive a receipt?</string>
     <string name="email">Email</string>
     <string name="sms">SMS</string>
