--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="checkout">Checkout</string>
     <string name="amount_entered">Amount entered</string>
 
-    <string name="error_fail_to_send_email_receipt">Failed to send email receipt</string>
+    <string name="error_fail_to_send_email_receipt">Failed to send receipt email</string>
 
     <string name="send_receipt_tip">How would you like to receive a receipt?</string>
     <string name="email">Email</string>
